<resources>
    <string name="app_name">Demolistloader</string>
    <string name="id">id</string>
    <string name="provider">provider</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="speed">speed</string>
    <string name="time">time</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="use_drop_down_to_change_min_update_interval">use drop down to change min update interval in ms</string>
</resources>