<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/use_drop_down_to_change_min_update_interval"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size"
        android:textStyle="normal" />

    <Button
        android:id="@+id/start_loc"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/header"
        android:text="@string/start" />

    <Button
        android:id="@+id/stop_loc"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/header"
        android:text="@string/stop" />

    <Spinner
        android:id="@+id/spinner_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/start_loc"
        android:layout_below="@+id/header"
        android:layout_toEndOf="@id/start_loc"
        android:layout_toLeftOf="@id/stop_loc"
        android:layout_toRightOf="@id/start_loc"
        android:layout_toStartOf="@id/stop_loc">

    </Spinner>

    <LinearLayout
        android:id="@+id/linear_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_loc"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/loc_label1"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_height"
            android:layout_weight=".5"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/id"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/loc_label2"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_height"
            android:layout_weight=".7"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/provider"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/loc_label3"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_height"
            android:layout_weight=".7"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/latitude"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/loc_label4"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_height"
            android:layout_weight=".7"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/longitude"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/loc_label5"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_height"
            android:layout_weight=".7"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/speed"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/loc_label6"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_height"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/time"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size"
            android:textStyle="normal" />
    </LinearLayout>

    <ListView
        android:id="@+id/loc_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_parent" />

    <FrameLayout
        android:id="@+id/mmi"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>
</RelativeLayout>