<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.demoapp.ceinfo.demolistloader.MainActivity">


    <LinearLayout
        android:id="@+id/linear_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/loc_label1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/id"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/loc_label2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/provider"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/loc_label3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/latitude"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/loc_label4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/longitude"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/loc_label5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/speed"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/loc_label6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/time"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="normal" />
    </LinearLayout>

    <ListView
        android:id="@+id/loc_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_parent" />
</RelativeLayout>